@@ -1,6 +1,7 @@
 meecast (0.9.3) unstable; urgency=low
 
   * Added United Kingdom to foreca.com source
+  * Added Germany's stations to openweathermap.org source
   * Fixed "N/A" wind direction
   * Fixed problem with today data for weather.com source
   * Fixed problem with n/a icon for Atmos iconset
